Adds the documentation, the icon and the executable into the Debian packages