@@ -69,6 +69,7 @@
 	<property name="homepage-url" value="http://${project-unix-name}.sourceforge.net" />
 	<property name="codebase-url" value="${homepage-url}/very_experimental/" />
 	<property name="vendor" value="Julien GOUESSE" />
+	<property name="email" value="gouessej@orange.fr" />
 	<property name="alias" value="gouessej"/>
 	<property name="keystore" value="${destdir}/key"/>
 	<property name="openjdk-macosx-universal-build-url" value="https://bitbucket.org/alexkasko/openjdk-unofficial-builds/downloads/openjdk-1.7.0-u60-unofficial-macosx-x86_64-image.zip"/>
@@ -79,6 +80,7 @@
 	<property name="game-jnlp-filename" value="${project-unix-name}.jnlp" />
 	<property name="game-jar-filename" value="${project-unix-name}.jar" />
 	<property name="game-zip-filename" value="${project-unix-name}.zip" />
+	<!-- The logo of the game must be a PNG file composed of 64 * 64 pixels -->
 	<property name="game-logo-filename" value="${project-unix-name}Logo.png"/>
 	<property name="game-app-dirname" value="${project-unix-name}.app" />
 	<property name="game-app-zip-filename" value="${game-app-dirname}.zip" />
@@ -563,21 +565,109 @@ Categories=Game;Shooter;]]></echo>
 	<!-- Create DEB                                                        -->
 	<!-- ================================================================= -->
 	<target name="create-deb">
-	    <delete failonerror="false" file="${destdir}/control" />
-	    <echo file="${destdir}/control"><![CDATA[Package: ${project-unix-name}
+		<!-- The package name must respect the Debian Naming Convention -->
+		<to-package-name property="game-package-name" input="${game-short-name}"/>
+		<!-- Removes the extension from the icon name. FIXME: remove any extension -->
+		<basename file="${game-logo-filename}" property="game-icon-name" suffix=".png"/>
+		<echo file="${destdir}/${game-package-name}.desktop"><![CDATA[[Desktop Entry]
+Name=${game-long-name}
+Comment=${game-short-description}
+Exec=${game-package-name}
+Icon=${game-icon-name}
+Terminal=false
+Type=Application
+Categories=Game;Shooter;]]></echo>
+	    <echo file="${destdir}/control"><![CDATA[Package: ${game-package-name}
 Version: 0.0
 Section: Games
 Priority: low
-Architecture: all
+Architecture: i386
 Description: ${game-long-description}
-Maintainer: gouessej@orange.fr]]>
-		</echo>
-		<pure-java-deb destfile="${destdir}/${project-unix-name}.deb" control="${destdir}" verbose="true">
+Maintainer: ${vendor} <${email}>
+Depends: 
+Homepage: ${homepage-url}
+Description: ${game-long-description}]]></echo>
+		<jndt platform="linux32" executable="${game-package-name}" appjar="${destdir}/${game-jar-filename}" 
+		    mainclass="${game-main-class-for-packr}" outdir="${destdir}/tmp_linux32_game" 
+		    vmargs="-Xmx256m;-XX:MaxDirectMemorySize=128M;-Djava.ext.dirs=" jdk="${openjdk-linux-i586-build-url}" 
+		    bundleidentifier="net.sourceforge.tuer" iconsfile="${destdir}/${game-logo-filename}" 
+		    antreimplementationenabled="true" nativelauncherenabled="false"/>
+		<pure-java-deb destfile="${destdir}/${game-package-name}-0-0.i386.deb" control="${destdir}" verbose="true">
+			<!-- TODO: add the rest of the JRE -->
 			<data src="${destdir}/${game-jar-filename}" type="file">
-				<mapper type="perm" prefix="/usr/share/${project-unix-name}"/>
+				<mapper type="perm" prefix="/usr/share/${game-package-name}"/>
 			</data>
+			<data src="${destdir}/tmp_linux32_game/${game-package-name}" type="file">
+			    <mapper type="perm" prefix="usr/share/${game-package-name}" filemode="755"/>
+			</data>
+			<data src="${destdir}/tmp_linux32_game/jre/bin/java" type="file">
+			    <mapper type="perm" prefix="/usr/share/${game-package-name}/jre/bin" filemode="755"/>
+			</data>
+			<data src="${destdir}/${game-package-name}.desktop" type="file">
+			    <mapper type="perm" prefix="/usr/share/applications"/>
+			</data>
+			<data src="images/${game-logo-filename}" type="file">
+			    <mapper type="perm" prefix="/usr/share/icons/hicolor/64x64/apps"/>
+			</data>
+			<data src="LICENSE.txt" type="file">
+			    <mapper type="perm" prefix="/usr/share/doc/${game-package-name}"/>
+			</data>
+			<data src="NOTICE.txt" type="file">
+			    <mapper type="perm" prefix="/usr/share/doc/${game-package-name}"/>
+			</data>
+			<data src="README.txt" type="file">
+			    <mapper type="perm" prefix="/usr/share/doc/${game-package-name}"/>
+			</data>
+			<!-- TODO: add the symbolic link -->
 		</pure-java-deb>
+		<delete dir="${destdir}/tmp_linux32_game" failonerror="true" />
 		<delete failonerror="false" file="${destdir}/control" />
+		<echo file="${destdir}/control"><![CDATA[Package: ${game-package-name}
+Version: 0.0
+Section: Games
+Priority: low
+Architecture: amd64
+Description: ${game-long-description}
+Maintainer: ${vendor} <${email}>
+Depends: 
+Homepage: ${homepage-url}
+Description: ${game-long-description}]]></echo>
+		<jndt platform="linux64" executable="${game-package-name}" appjar="${destdir}/${game-jar-filename}" 
+		    mainclass="${game-main-class-for-packr}" outdir="${destdir}/tmp_linux64_game" 
+		    vmargs="-Xmx256m;-XX:MaxDirectMemorySize=128M;-Djava.ext.dirs=" jdk="${openjdk-linux-amd64-build-url}" 
+		    bundleidentifier="net.sourceforge.tuer" iconsfile="${destdir}/${game-logo-filename}" 
+		    antreimplementationenabled="true" nativelauncherenabled="false"/>
+		<pure-java-deb destfile="${destdir}/${game-package-name}-0-0.amd64.deb" control="${destdir}" verbose="true">
+			<!-- TODO: add the rest of the JRE -->
+			<data src="${destdir}/${game-jar-filename}" type="file">
+			    <mapper type="perm" prefix="/usr/share/${game-package-name}"/>
+			</data>
+			<data src="${destdir}/tmp_linux64_game/${game-package-name}" type="file">
+			    <mapper type="perm" prefix="usr/share/${game-package-name}" filemode="755"/>
+			</data>
+			<data src="${destdir}/tmp_linux64_game/jre/bin/java" type="file">
+			    <mapper type="perm" prefix="/usr/share/${game-package-name}/jre/bin" filemode="755"/>
+			</data>
+			<data src="${destdir}/${game-package-name}.desktop" type="file">
+			    <mapper type="perm" prefix="/usr/share/applications"/>
+			</data>
+			<data src="images/${game-logo-filename}" type="file">
+			    <mapper type="perm" prefix="/usr/share/icons/hicolor/64x64/apps"/>
+			</data>
+			<data src="LICENSE.txt" type="file">
+			    <mapper type="perm" prefix="/usr/share/doc/${game-package-name}"/>
+			</data>
+			<data src="NOTICE.txt" type="file">
+			    <mapper type="perm" prefix="/usr/share/doc/${game-package-name}"/>
+			</data>
+			<data src="README.txt" type="file">
+			    <mapper type="perm" prefix="/usr/share/doc/${game-package-name}"/>
+			</data>
+			<!-- TODO: add the symbolic link -->
+		</pure-java-deb>
+		<delete dir="${destdir}/tmp_linux64_game" failonerror="true" />
+		<delete failonerror="false" file="${destdir}/control" />
+		<delete file="${destdir}/${game-package-name}.desktop" failonerror="true" />
 	</target>
 	<macrodef name="jndt">
 		<attribute name="platform" description="one of windows, linux32, linux64, mac"/>
